--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
+                android:visibility="gone"
                 android:layout_marginRight="60dp"
                 android:text="@string/change_pwd" />
 
@@ -46,6 +47,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:tint="@color/colorAccent"
+                android:visibility="gone"
                 app:srcCompat="@android:drawable/ic_lock_power_off" />
 
         </RelativeLayout>
@@ -83,7 +85,7 @@
 
                     <View
                         android:id="@+id/view"
-                        android:layout_width="0dp"
+                        android:layout_width="350dp"
                         android:layout_height="139dp"
                         android:layout_marginTop="60dp"
                         android:background="@color/colorAccent"
@@ -104,7 +106,7 @@
                         app:layout_constraintTop_toTopOf="@+id/view"
                         app:srcCompat="@drawable/esc_logo" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/txtName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -112,6 +114,11 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="8dp"
                         android:text="John Doe"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:background="@null"
+                        android:imeOptions="actionDone"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
