--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -102,6 +102,7 @@
                                         android:inputType="phone"
                                         android:paddingBottom="2dp"
                                         android:textColor="#f0f7f4"
+                                        android:maxLength="10"
                                         android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                         android:textSize="16sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
@@ -245,6 +246,7 @@
                                         android:layout_height="wrap_content"
                                         android:background="@drawable/selector_bg_edit_2"
                                         android:hint="@string/gst"
+                                        android:maxLength="15"
                                         android:inputType="textPersonName"
                                         android:paddingBottom="2dp"
                                         android:textColor="#f0f7f4"
