--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">evershinesoftwares.com</domain>
+        <domain includeSubdomains="true">testing.evershinesoftwares.com</domain>
+
     </domain-config>
 </network-security-config>
