--- a/app/src/main/res/drawable/ic_bottom_home.xml
+++ b/app/src/main/res/drawable/ic_bottom_home.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="495.398dp"
-    android:height="495.398dp"
+    android:width="@dimen/_500sdp"
+    android:height="@dimen/_500sdp"
     android:viewportWidth="495.398"
     android:viewportHeight="495.398">
   <path
