--- a/app/src/main/res/drawable/ic_bottom_ledger.xml
+++ b/app/src/main/res/drawable/ic_bottom_ledger.xml
@@ -1,42 +1,30 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m20,47c-0.718,0 -1.341,0.486 -1.515,1.183l-1.539,6.157 0.798,2.66h5.975l-2.205,-8.817c-0.173,-0.697 -0.796,-1.183 -1.514,-1.183z"/>
+      android:pathData="m17.25,24c-3.722,0 -6.75,-3.028 -6.75,-6.75s3.028,-6.75 6.75,-6.75 6.75,3.028 6.75,6.75 -3.028,6.75 -6.75,6.75z"
+      android:fillColor="#2196f3"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m28,45c-0.69,0 -1.297,0.49 -1.441,1.165l-1.61,7.51 0.832,3.325h5.982l-2.322,-10.834c-0.144,-0.676 -0.751,-1.166 -1.441,-1.166z"/>
+      android:pathData="m17.25,21c-0.552,0 -1,-0.448 -1,-1v-5.5c0,-0.552 0.448,-1 1,-1s1,0.448 1,1v5.5c0,0.552 -0.448,1 -1,1z"
+      android:fillColor="#fff"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m12,49c-0.751,0 -1.401,0.483 -1.617,1.203l-2.039,6.797h7.312l-2.039,-6.797c-0.216,-0.72 -0.866,-1.203 -1.617,-1.203z"/>
+      android:pathData="m20,18.25h-5.5c-0.552,0 -1,-0.448 -1,-1s0.448,-1 1,-1h5.5c0.552,0 1,0.448 1,1s-0.448,1 -1,1z"
+      android:fillColor="#fff"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m19,7v6h26v-2h-4v-4z"/>
+      android:pathData="m23.98,3.66v0.04c0,0.97 -0.38,1.9 -1.07,2.59l-1.94,1.98 -5.25,-5.22 1.92,-1.96c0.69,-0.7 1.62,-1.1 2.61,-1.11 0.98,0.03 1.92,0.38 2.63,1.08 0.7,0.69 1.1,1.61 1.1,2.6z"
+      android:fillColor="#f44336"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m39,25.586v17.518c2.135,-3.393 5.785,-5.73 10,-6.053v-26.051h-2v4h-30v-10h24v-2h-26v14h15.414zM43,35h-2v-2h2zM47,35h-2v-2h2zM47,31h-6v-2h6zM47,27h-6v-2h6zM47,23h-6v-2h6zM35,17h12v2h-12z"/>
+      android:pathData="m5.15,18.79 l-2.59,-2.59c-0.06,0.07 -0.11,0.14 -0.14,0.23l-2.38,6.56c-0.09,0.28 -0.03,0.58 0.18,0.79 0.14,0.14 0.33,0.22 0.53,0.22 0.09,0 0.17,-0.01 0.26,-0.04l6.56,-2.38c0.09,-0.03 0.16,-0.08 0.23,-0.14z"
+      android:fillColor="#ffe082"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m35.586,25 l-4.586,-4.586v4.586z"/>
+      android:pathData="m8.5,17.25c0,1.04 0.18,2.04 0.52,2.97l-1.22,1.22 -2.65,-2.65 3.61,-3.65c-0.17,0.67 -0.26,1.38 -0.26,2.11z"
+      android:fillColor="#ffb300"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m43,4.414v4.586h4.586z"/>
+      android:pathData="m20.97,8.27 l-0.75,0.75c-0.93,-0.34 -1.93,-0.52 -2.97,-0.52 -0.75,0 -1.48,0.1 -2.18,0.28l3.18,-3.21 2.71,2.69z"
+      android:fillColor="#ffb300"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m51,51h-2v4h2c1.103,0 2,-0.897 2,-2s-0.897,-2 -2,-2z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m51,45h-2v4h2c1.103,0 2,-0.897 2,-2s-0.897,-2 -2,-2z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m50,39c-6.065,0 -11,4.935 -11,11s4.935,11 11,11 11,-4.935 11,-11 -4.935,-11 -11,-11zM55,53c0,2.206 -1.794,4 -4,4v2h-2v-2h-2v-14h2v-2h2v2c2.206,0 4,1.794 4,4 0,1.193 -0.525,2.267 -1.357,3 0.832,0.733 1.357,1.807 1.357,3z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m29,19h-26v42h34v-34h-8zM9,21h18v2h-18zM5,21h2v2h-2zM5,25h22v2h-22zM5.656,59 L8.468,49.629c0.471,-1.572 1.891,-2.629 3.532,-2.629s3.061,1.057 3.533,2.629l0.289,0.963 0.723,-2.893c0.396,-1.59 1.817,-2.699 3.455,-2.699s3.059,1.109 3.455,2.698l0.393,1.571 0.755,-3.523c0.34,-1.591 1.769,-2.746 3.397,-2.746s3.057,1.155 3.397,2.747l2.84,13.253zM35,29v12h-30v-12z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m7,31h26v8h-26z"/>
+      android:pathData="m18.25,5.57 l-3.18,3.21c-3.1,0.8 -5.54,3.25 -6.31,6.36l-3.61,3.65 -2.59,-2.59 0.08,-0.08 12.53,-12.52 0.55,-0.55z"
+      android:fillColor="#ffc107"/>
 </vector>
