--- a/app/src/main/res/layout/activity_add_company.xml
+++ b/app/src/main/res/layout/activity_add_company.xml
@@ -96,7 +96,8 @@
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/selector_bg_edit"
                                 android:hint="@string/gst"
-                                android:inputType="textPersonName"                                android:paddingBottom="2dp"
+                                android:inputType="textCapCharacters"
+                                android:paddingBottom="2dp"
                                 android:maxLength="15"
                                 android:textColor="#2fa881"
                                 android:textCursorDrawable="@drawable/bg_input_cursor"
