--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -74,10 +74,15 @@
                                 </LinearLayout>
 
 
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@color/gray_login"/>
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="40dp"
-                                    android:layout_marginTop="20dp"
+                                    android:layout_marginTop="10dp"
                                     android:paddingStart="50dp"
                                     android:paddingEnd="30dp">
 
@@ -101,11 +106,16 @@
                                     </com.google.android.material.textfield.TextInputLayout>
                                 </LinearLayout>
 
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@color/gray_login"/>
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="40dp"
-                                    android:layout_marginTop="20dp"
+                                    android:layout_marginTop="10dp"
                                     android:paddingStart="50dp"
                                     android:paddingEnd="30dp">
 
@@ -129,11 +139,16 @@
                                     </com.google.android.material.textfield.TextInputLayout>
                                 </LinearLayout>
 
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@color/gray_login"/>
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="40dp"
-                                    android:layout_marginTop="20dp"
+                                    android:layout_marginTop="10dp"
                                     android:paddingStart="50dp"
                                     android:paddingEnd="30dp">
 
@@ -158,10 +173,16 @@
                                     </com.google.android.material.textfield.TextInputLayout>
                                 </LinearLayout>
 
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@color/gray_login"/>
+
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="40dp"
-                                    android:layout_marginTop="20dp"
+                                    android:layout_marginTop="10dp"
                                     android:paddingStart="50dp"
                                     android:paddingEnd="30dp">
 
@@ -185,6 +206,11 @@
                                     </com.google.android.material.textfield.TextInputLayout>
                                 </LinearLayout>
 
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:background="@color/gray_login"/>
 
                                 <Button
                                     android:id="@+id/bt_go"
