--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white_color">
@@ -11,48 +11,44 @@
 
 
             <LinearLayout
+                android:id="@+id/lytHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
                 android:orientation="vertical">
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    android:elevation="3dp">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txtname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:textStyle="bold"
+                        android:layout_centerHorizontal="true"
+                        android:textColor="@color/white_color"
+                        android:text="EVERSHINE SOFTWARE" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:id="@+id/title_m"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:src="@drawable/esc_logo"/>
-                        <TextView
-                            android:id="@+id/txtname"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:textAppearance="@android:style/TextAppearance.Material.Title"
-                            android:text="fgfghg" />
+                    <ImageView
+                        android:id="@+id/logout"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:tint="@color/white_color"
+                        android:layout_alignParentRight="true"
+                        app:srcCompat="@android:drawable/ic_lock_power_off"/>
 
-                    </LinearLayout>
-                </androidx.appcompat.widget.Toolbar>
+                </RelativeLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/hint_color"/>
+<!--                <View-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="0.5dp"-->
+<!--                    android:background="@color/hint_color"/>-->
 
             </LinearLayout>
 
@@ -60,6 +56,8 @@
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@+id/lytHeader"
+                android:layout_above="@+id/navigation"
                 android:background="@android:color/white" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -68,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/white_color"
+            android:layout_alignParentBottom="true"
             app:itemIconTint="@color/colorAccent"
             app:itemTextColor="@color/colorAccent"
             app:labelVisibilityMode="labeled"
@@ -78,5 +77,5 @@
             layout="@layout/layout_loader"
             android:visibility="gone" />
 
-    </FrameLayout>
+    </RelativeLayout>
 </layout>
