--- a/app/src/main/res/layout/fragment_sundry_debators.xml
+++ b/app/src/main/res/layout/fragment_sundry_debators.xml
@@ -17,39 +17,9 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    android:elevation="3dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:id="@+id/title_m"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:src="@drawable/esc_logo"/>
-                        <TextView
-                            android:id="@+id/wm_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:textAppearance="@android:style/TextAppearance.Material.Title"
-                            android:text="Sundry Debtors" />
-
-                    </LinearLayout>
-                </androidx.appcompat.widget.Toolbar>
+                <include
+                    android:id="@+id/included_toolbar"
+                    layout="@layout/layout_toolbar" />
 
                 <View
                     android:layout_width="match_parent"
@@ -227,15 +197,15 @@
             </LinearLayout>
         </ScrollView>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/white_color"
-            app:itemIconTint="@color/colorAccent"
-            app:itemTextColor="@color/colorAccent"
-            app:menu="@menu/navigation" />
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:id="@+id/navigation"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom"-->
+<!--            android:background="@color/white_color"-->
+<!--            app:itemIconTint="@color/colorAccent"-->
+<!--            app:itemTextColor="@color/colorAccent"-->
+<!--            app:menu="@menu/navigation" />-->
 
         <include
             android:id="@+id/loading_view"
