--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,8 @@
     <color name="white_greyish">#EEEEEE</color>
     <color name="button_selectorcolor">#BBCFD1</color>
     <color name="gray_login">#707070</color>
+    <color name="colorDarkGray">#989898</color>
+    <color name="colorBlue">#2874F0</color>
+
+
 </resources>
